// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DLectures should not render anything when prop is falsy 1`] = `
<div
  class="px-6 text-truncate"
>
  <!---->
</div>
`;

exports[`DLectures should not render anything when prop is falsy 2`] = `
<div
  class="px-6 text-truncate"
>
  <!---->
</div>
`;

exports[`DLectures should not render anything when prop is falsy 3`] = `
<div
  class="px-6 text-truncate"
>
  <!---->
</div>
`;

exports[`DLectures should not render anything when prop is falsy 4`] = `<!---->`;

exports[`DLectures should render correct markup when prop is correct 1`] = `
<div
  class="px-6 text-truncate"
>
  <span
    class="mr-2"
    style="display: inline-block; font-size: 0.98rem; color: white;"
  >
    
      name en
    
  </span>
</div>
`;
